2025-08-05  Zhengyi Fu  <i@fuzy.me>

	Add indicator to recursive minibuffer

	* init.el: Enable `minibuffer-depth-indicate-mode'.
	(+custom-faces): Customize `minibuffer-depth-indicator' face.
	(minibuffer-depth-indicator-function): Set to a lambda that
	returns unicode symbols.

2025-08-04  Zhengyi Fu  <i@fuzy.me>

	* init.el (+import-env-var-for-display): Use frame parameter
	DISPAY.

2025-08-04  Zhengyi Fu  <i@fuzy.me>

	Update elfeed configuration

	* init.el (elfeed-search-remain-on-entry): Set to t.
	(elfeed-show-entry-switch): Set to `+elfeed-display-buffer'.
	(+elfeed-display-buffer):
	(+elfeed-search-show-entry-pre): New function.
	(elfeed-show-next, elfeed-show-prev): Adviced.
	(elfeed-show-entry-delete): Set to lambda to kill buffer only in
	`elfeed-show-mode'.
	(+elfeed-scroll-up-command, +elfeed-scroll-down-command): New commands.
	(elfeed-search-mode-map): New bindings on n, p, M-RET.
	(elfeed-show-mode-map): New bindings SPC, S-SPC.

2025-08-04  Zhengyi Fu  <i@fuzy.me>

	Update font configuration

	* init.el (modus-themes-variable-pitch-ui): Set to nil.
	(+custom-faces): Modify `fixed-patch', `fixed-pitch-serif',
	`variable-pitch' and `header-line-inactive'.

2025-08-04  Zhengyi Fu  <i@fuzy.me>

	* init.el (+custom-faces): Customize `eat-term-font-0' to use
	IosevkaTerm.

2025-08-04  Zhengyi Fu  <i@fuzy.me>

	* site-lisp/telega-config.el (telega-emoji-use-images): Set to false.

2025-08-03  Zhengyi Fu  <i@fuzy.me>

	Replace deadgrep with rg.el

	* init.el (mode-specific-map): Bind "r" to `rg-dwim'.
	* packages.el:

2025-08-03  Zhengyi Fu  <i@fuzy.me>

	* site-lisp/pp-posframe.el (pp-posframe-display-value): Display
	right arrow instead of =>.

2025-08-02  Zhengyi Fu  <i@fuzy.me>

	* init.el (gptel): Load gptel-config.el.

2025-08-02  Zhengyi Fu  <i@fuzy.me>

	* init.el (+apply-font-setting): Rename arguments.
	(+custom-fonts-alist, +custom-fontset): Use bolder fonts.

2025-08-02  Zhengyi Fu  <i@fuzy.me>

	* init.el: Fix p-search info extension name.
